fixed navbar and wrapping around picture on about page

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -25,12 +25,10 @@ main {
     background-color: lightyellow;
 }
 
-.card {
-    background-color: lightyellow;
-}
 
-.card-img {
-margin-top: 50%;
+.about-img {
+width: 150px;
+height: 150px;
 }
 
 .margin {
